# html_to_pdf

./: .gitignore  Dockerfile  Makefile  README.md  html2manual.spec  html2manual.yaml  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
examples/sample_manual/: menu.html
examples/sample_manual/Contents/: intro.html  setup.html
examples/sample_manual/assets/: app.js  style.css
html2manual/: README.md  __init__.py  audit.py  cli.py  config.py  logging_setup.py  pipeline.py
html2manual/flatten/: README.md  __init__.py  css_inliner.py  encoding.py  html_processor.py  image_inliner.py  js_inliner.py  overflow_fix.py
html2manual/menu_parser/: README.md  __init__.py  fallback_contents.py  mftbc_menu.py
html2manual/render/: README.md  __init__.py  merge.py  playwright.py  wkhtml.py
tests/: conftest.py  test_audit.py  test_inlining.py  test_menu_parser.py  test_rendering.py
